Fix build of anc

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,8 @@
 FROM rabits/qt:5.4-android
 
-RUN echo "y" | sudo /opt/android-sdk-linux/tools/android update sdk -u -a -t extra-android-support,extra-android-m2repository
+USER root
+
+RUN apt-get -qq update && apt-get -qq install --fix-missing -y g++ && apt-get -qq clean
+RUN echo "y" | /opt/android-sdk-linux/tools/android update sdk -u -a -t extra-android-support,extra-android-m2repository
+
+USER user
