Remove some redundany in project file specification and clean up source path

--- a/.qmake.conf
+++ b/.qmake.conf
@@ -2,4 +2,4 @@ load(qt_build_config)
 
 MODULE_VERSION = 5.6.0
 MODULE_CONFIG = qmlandroid
-QMLANDROID_PREFIX = $$PWD
+QMLANDROID_PREFIX = $$PWD/src
